--- a/admin/thesheet.css
+++ b/admin/thesheet.css
@@ -1,3 +1,17 @@
+@keyframes death {
+    0%   {transform: matrix(1, 2, 3, 4, 5, 6);}
+    25%  {transform: translate(120px, 50%);}
+    50%  {transform: scale(2, 0.5);}
+    75%  {transform: rotate(0.5turn);}
+    100% {transform: matrix(1, 2, 3, 4, 5, 6);}
+}
+
 .anim {
-    an
+    animation-delay: 0ms;
+    animation-direction: normal;
+    animation-duration: 1s;
+    animation-fill-mode: normal;
+    animation-iteration-count: infinite;
+    animation-name: none;
+    animation-play-state: running;
 }
