--- a/admin/thesheet.css
+++ b/admin/thesheet.css
@@ -12,6 +12,6 @@
     animation-duration: 1s;
     animation-fill-mode: normal;
     animation-iteration-count: infinite;
-    animation-name: none;
+    animation-name: death;
     animation-play-state: running;
 }
